--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <body>
 <h1>Conner Casagrande's Website</h1>
   
+  <h2>About Me</h2>
   <div> <p>Epic</p>
     
   </div>
+  
+  <h2>Education</h2>
+  
+  <h2>Accomplishments</h2>
+  <ul>
+    <li>Completed High School</li>
+  </ul>
+
+   <h2>Links</h2>
+   <p>My GitHub page: </p>
+   <p>My Codecademy page: </p>
 </body>
