--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
    <p>My GitHub page: </p>
    <p>My Codecademy page: </p>
   
+  <h3>BRUTAL DOOM</h3>
+  <img src="" alt="DOOM"/>
+  <p></p>
+  <p>Doom on steam: </p>
   
-  <img src="" alt=""/>
   
 </body>
