--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </ul>
 
    <h3>Links</h3>
-   <p>My GitHub page: </p>
-   <p>My Codecademy page: </p>
+   <p>My GitHub page: https://github.com/Bighouse55 </p>
+   <p>My Codecademy page: https://www.codecademy.com/Bighouse55 </p>
   
   <h3>BRUTAL DOOM</h3>
   <img src="" alt="DOOM"/>
