--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
 
    <h3>Links</h3>
    <a href="https://github.com/Bighouse55">My GitHub page</a>
-   <p>My Codecademy page:  </p>
+   <a href="https://www.codecademy.com/Bighouse55">My Codecademy page</a>
   
-  <h3>BRUTAL DOOM</h3>
-  <img src="" alt="DOOM"/>
-  <p></p>
-  <p>Doom on steam: </p>
-  
-  
+  <img src="https://www.sciencenews.org/sites/default/files/2019/04/main/articles/041019_LG-EV-MT_EHT_feat.jpg" alt="blackhole"/>
+   
 </body>
