--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
   </div>
   
   <h3>Education</h3>
+  <ul>
+    <li>Intro to Computer Science</li>
+  </ul>
   
   <h3>Accomplishments</h3>
   <ul>
     <li>Completed High School</li>
+    <li>Got a black belt</li>
   </ul>
 
    <h3>Links</h3>
    <a href="https://github.com/Bighouse55">My GitHub page</a>
    <a href="https://www.codecademy.com/Bighouse55">My Codecademy page</a>
   
+  <div>
   <img src="https://www.sciencenews.org/sites/default/files/2019/04/main/articles/041019_LG-EV-MT_EHT_feat.jpg" alt="blackhole"/>
-   
+  </div> 
+    
 </body>
