--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<html>
+  
+  <head>
+    <title>Bighouse</title>
+  </head>
+  
 <body>
-<h1>Conner Casagrande's Website</h1>
+  
+  <h1>Conner Casagrande's Website</h1>
   
   <h3>About Me</h3>
   <div> <p>Epic</p>
@@ -12,13 +19,14 @@
   </ul>
   
   <h3>Accomplishments</h3>
-  <ul>
+  <ul class="listcolor">
     <li>Completed High School</li>
     <li>Got a black belt</li>
   </ul>
 
    <h3>Links</h3>
    <a href="https://github.com/Bighouse55">My GitHub page</a>
+  
    <a href="https://www.codecademy.com/Bighouse55">My Codecademy page</a>
   
   <div>
@@ -26,3 +34,5 @@
   </div> 
     
 </body>
+  
+</html>
