--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
 <body>
   
-  <h1>Conner Casagrande's Website</h1>
+  <h1 class="listcolor">Conner Casagrande's Website</h1>
   
   <h3>About Me</h3>
   <div> <p>Epic</p>
@@ -19,7 +19,7 @@
   </ul>
   
   <h3>Accomplishments</h3>
-  <ul class="listcolor">
+  <ul>
     <li>Completed High School</li>
     <li>Got a black belt</li>
   </ul>
