--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <h1 class="listcolor">Conner Casagrande's Website</h1>
   
   <h3>About Me</h3>
-  <p>Epic</p>
+  <p>Hello! I'm Conner Casagrande. </p>
     
   <h3>Education</h3>
   
-  <div id="">
+  <div id="sections">
   <ul>
     <li>Intro to Computer Science</li>
   </ul>
@@ -21,7 +21,7 @@
     
   <h3>Accomplishments</h3>
   
-  <div id"">
+  <div id="sections">
   <ul>
     <li>Completed High School</li>
     <li>Got a black belt</li>
