--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <head>
     <title>Bighouse</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css")
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     
   </head>
   
