--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <title>Bighouse</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="text/css" type="css/style.css" rel="stylesheet">
     
   </head>
   
