--- a/index.html
+++ b/index.html
@@ -12,24 +12,21 @@
   <h1 class="listcolor">Conner Casagrande's Website</h1>
   
   <h3>About Me</h3>
-  <p>Hello! I'm Conner Casagrande. </p>
+  <p>Hello! I'm Conner Casagrande.  </p>
     
   <h3>Education</h3>
   
-  <div id="sections">
   <ul>
-    <li>Intro to Computer Science</li>
+    <li id="sections">Intro to Computer Science</li>
   </ul>
-  </div>
+ 
     
   <h3>Accomplishments</h3>
   
-  <div id="sections">
   <ul>
-    <li>Completed High School</li>
-    <li>Got a black belt</li>
+    <li id="sections">Completed High School</li>
+    <li id="sections">Got a black belt</li>
   </ul>
-  </div>
 
    <h3>Links</h3>
    <a href="https://github.com/Bighouse55">My GitHub page</a>
