--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <h1 class="listcolor">Conner Casagrande's Website</h1>
   
   <h3>About Me</h3>
-  <p>Hello! I'm Conner Casagrande.  </p>
+  <p>Hello! I'm Conner Casagrande. I am a software engineering major at fgcu. I love creating 
+    and I love computers, and I feel that being a computer programer allows me to do both of 
+    theses things without being broke. </p>
     
   <h3>Education</h3>
   
